--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  # host: localhost
+  host: localhost
   adapter: postgresql
   database: ideabox_test
   username: ideabox
