--- a/.editorconfig
+++ b/.editorconfig
@@ -4,21 +4,21 @@ root = true
 [*]
 trim_trailing_whitespace = true
 insert_final_newline = true
+charset = utf-8
+end_of_line = lf
 
 [*.rb]
 indent_style = space
 indent_size = 2
-charset = utf-8
-end_of_line = lf
 
 [*.haml]
 indent_style = space
 indent_size = 2
-charset = utf-8
-end_of_line = lf
+
+[*.yml]
+indent_style = space
+indent_size = 4
 
 [Gemfile]
 indent_style = space
 indent_size = 2
-charset = utf-8
-end_of_line = lf
