--- a/config/twitter.yml
+++ b/config/twitter.yml
@@ -4,17 +4,17 @@
 #   2. Set TWITTER_ENABLED = true in config/environment_custom.rb
 
 development:
-    key:    YOUR_TWITTER_API_KEY
-    secret: YOUR_TWITTER_API_SECRET
+    :key:    YOUR_TWITTER_API_KEY
+    :secret: YOUR_TWITTER_API_SECRET
 
 test:
-    key:    test
-    secret: test
+    :key:    test
+    :secret: test
 
 staging:
-    key:    YOUR_TWITTER_API_KEY
-    secret: YOUR_TWITTER_API_SECRET
+    :key:    YOUR_TWITTER_API_KEY
+    :secret: YOUR_TWITTER_API_SECRET
 
 production:
-    key:    YOUR_TWITTER_API_KEY
-    secret: YOUR_TWITTER_API_SECRET
+    :key:    YOUR_TWITTER_API_KEY
+    :secret: YOUR_TWITTER_API_SECRET
